--- a/index.html
+++ b/index.html
@@ -34,20 +34,7 @@
                     </div>
                 </form>
                 <section class="container-bottom" id="ideacard">
-                    <article id="ideacard" class="idea-card">
-                        <nav class="idea-nav">
-                            <img class="card-icon" id="favoriteicon" src="" alt="favorite idea star">
-                            <img class="card-icon" id="deleteicon" src="assets/delete.svg" alt="delete idea icon">
-                        </nav>
-                        <div class="idea-content">
-                            <h2 class="idea-title">Title</h2>
-                            <p class="idea-body">Body</p>
-                        </div>
-                        <footer class="idea-comment">
-                            <img class="card-icon" src="assets/comment.svg" alt="add comment button">
-                            <label>Comment</label>
-                        </footer>
-                    </article>
+                   <!-- This is where user cards are generated -->
                 </section>
             </section>
         </main>
