refactor: Format id names using camel case

--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
                 <h1 class="heading">IdeaBox</h1>
                 <div class="starred-ideas-box">
                     <p class="starred-ideas">Filter Starred Ideas</p>
-                    <button class="show-ideas-button" id="showideasbutton">Show Starred Ideas</button>
+                    <button class="show-ideas-button" id="showIdeasButton">Show Starred Ideas</button>
                 </div>
             </section>
             <section class="container-right">
-                <form class="container-top" id="containertop">
+                <form class="container-top" id="containerTop">
                     <div class="title-area">
                         <label for="usertitle">Title</label>
-                        <textarea class="user-title" type="text" id="usertitle"></textarea>
+                        <textarea class="user-title" type="text" id="userTitle"></textarea>
                     </div>
                     <div class="body-area">
                         <label for="userbody">Body</label>
-                        <textarea class="user-body" type="text" id="userbody"></textarea>
+                        <textarea class="user-body" type="text" id="userBody"></textarea>
                     </div>
-                    <button type='button' class="save-button" id="savebutton">Save</button>
+                    <button type='button' class="save-button" id="saveButton">Save</button>
                     <div class="search-ideas-box">
                         <img class="search-image" src="assets/search.svg" alt="search button">
-                        <input class="search-field" type="text" id="searchfield" placeholder="Search Ideas" autocomplete="off" maxlength="40">
+                        <input class="search-field" type="text" id="searchField" placeholder="Search Ideas" autocomplete="off" maxlength="40">
                     </div>
                 </form>
-                <section class="container-bottom" id="ideacard">
+                <section class="container-bottom" id="ideaCard">
                    <!-- This is where user cards are generated -->
                 </section>
             </section>
