Add minor fixes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </div>
             </section>
             <section class="container-right">
-                <form class="container-top" id="containerTop">
+                <form class="container-top">
                     <div class="title-area">
                         <label for="usertitle">Title</label>
                         <textarea class="user-title" type="text" id="userTitle"></textarea>
@@ -33,9 +33,7 @@
                         <input class="search-field" type="text" id="searchField" placeholder="Search Ideas" autocomplete="off" maxlength="40">
                     </div>
                 </form>
-                <section class="container-bottom" id="ideaCard">
-                   <!-- This is where user cards are generated -->
-                </section>
+                <section class="container-bottom" id="ideaCard"></section>
             </section>
         </main>
         <script type="text/javascript" src="Idea.js"></script>
